Programa para el coverage completado

--- a/code/armstrong-numbers/package.json
+++ b/code/armstrong-numbers/package.json
@@ -11,7 +11,9 @@
   },
   "jest": {
     "collectCoverage": true,
-    "collectCoverageFrom": ["./src/**"],
+    "collectCoverageFrom": [
+      "./src/**"
+    ],
     "coverageThreshold": {
       "global": {
         "lines": 90
