--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,7 +25,7 @@ jobs: # jobs are made of steps
       with:
         node-version: ${{ matrix.node-version }}
     # Install a project with a clean slate
-    - run: npm ci
+    - run: npm i
     - run: npm test
     
       # Environment variables
