Programa para CodeCov

--- a/code/leap-years-P61634/package.json
+++ b/code/leap-years-P61634/package.json
@@ -12,7 +12,7 @@
   "jest": {
     "collectCoverage": true,
     "collectCoverageFrom": [
-      "./code/*/src/**"
+      "./src/**"
     ],
     "coverageThreshold": {
       "global": {
