Cambios en las slides

--- a/code/calculator/package.json
+++ b/code/calculator/package.json
@@ -11,12 +11,9 @@
   },
   "jest": {
     "collectCoverage": true,
-    "collectCoverageFrom": ["./src/**"],
-    "coverageThreshold": {
-      "global": {
-        "lines": 90
-      }
-    }
+    "collectCoverageFrom": [
+      "./src/**"
+    ]
   },
   "repository": {
     "type": "git",
