--- a/code/calculator/package.json
+++ b/code/calculator/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "jest": {
-    "collectCoverage": true,
+    "collectCoverage": false,
     "collectCoverageFrom": ["./src/**"],
     "coverageThreshold": {
       "global": {
