Ajustes a armstrong numbers

--- a/code/armstrong-numbers/package.json
+++ b/code/armstrong-numbers/package.json
@@ -16,7 +16,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "lines": 90
+        "lines": 70,
+        "branches": 70,
+        "statements": -10,
+        "functions": 100
       }
     }
   },
